; ModuleID = '/home/carl/AnghaBench/micropython/drivers/wiznet5k/ethernet/w5200/extr_w5200.c_WIZCHIP_READ_BUF.c'
source_filename = "/home/carl/AnghaBench/micropython/drivers/wiznet5k/ethernet/w5200/extr_w5200.c_WIZCHIP_READ_BUF.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_5__, %struct.TYPE_7__ }
%struct.TYPE_5__ = type { i32 (...)*, i32 (...)* }
%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 (i32*, i32)*, i32 (i32*, i32)* }

@WIZCHIP = common dso_local global %struct.TYPE_8__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @WIZCHIP_READ_BUF(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [4 x i32], align 16
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = call i32 (...) @WIZCHIP_CRITICAL_ENTER()
  %9 = load i32 (...)*, i32 (...)** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @WIZCHIP, i32 0, i32 0, i32 1), align 8
  %10 = call i32 (...) %9()
  %11 = getelementptr inbounds [4 x i32], [4 x i32]* %7, i64 0, i64 0
  %12 = load i32, i32* %4, align 4
  %13 = ashr i32 %12, 8
  store i32 %13, i32* %11, align 4
  %14 = getelementptr inbounds i32, i32* %11, i64 1
  %15 = load i32, i32* %4, align 4
  store i32 %15, i32* %14, align 4
  %16 = getelementptr inbounds i32, i32* %14, i64 1
  %17 = load i32, i32* %6, align 4
  %18 = ashr i32 %17, 8
  %19 = and i32 %18, 127
  %20 = or i32 0, %19
  store i32 %20, i32* %16, align 4
  %21 = getelementptr inbounds i32, i32* %16, i64 1
  %22 = load i32, i32* %6, align 4
  %23 = and i32 %22, 255
  store i32 %23, i32* %21, align 4
  %24 = load i32 (i32*, i32)*, i32 (i32*, i32)** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @WIZCHIP, i32 0, i32 1, i32 0, i32 1), align 8
  %25 = getelementptr inbounds [4 x i32], [4 x i32]* %7, i64 0, i64 0
  %26 = call i32 %24(i32* %25, i32 4)
  %27 = load i32 (i32*, i32)*, i32 (i32*, i32)** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @WIZCHIP, i32 0, i32 1, i32 0, i32 0), align 8
  %28 = load i32*, i32** %5, align 8
  %29 = load i32, i32* %6, align 4
  %30 = call i32 %27(i32* %28, i32 %29)
  %31 = load i32 (...)*, i32 (...)** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @WIZCHIP, i32 0, i32 0, i32 0), align 8
  %32 = call i32 (...) %31()
  %33 = call i32 (...) @WIZCHIP_CRITICAL_EXIT()
  ret void
}

declare dso_local i32 @WIZCHIP_CRITICAL_ENTER(...) #1

declare dso_local i32 @WIZCHIP_CRITICAL_EXIT(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
